# QtDart

./: .gitignore  CMakeLists.txt  QtDart.desktop.in  Readme.md  all.qrc  qdart.spec  qml.qrc
i18n/: QtDart_de_DE.ts
sql/: schema.sql
src/: Controller.cpp  Controller.h  Leg.cpp  Leg.h  MainWindow.cpp  MainWindow.h  Match.cpp  Match.h  Params.h  Params.h.in  Player.cpp  Player.h  PlayerModel.cpp  PlayerModel.h  PlayerWindow.cpp  PlayerWindow.h  Type.cpp  Type.h  main.cpp
ui/: MainWindow.ui  PlayerWindow.ui
